<resources>
    <string name="app_name">DoctorApp</string>
    <string name="are_you_a">Are you a</string>
    <string name="doctor">Doctor </string>
    <string name="or_user"> or User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="country">Country</string>
    <string name="pmdc_number">PMDC Number</string>
    <string name="upload_identity_card">Upload Your Doctor Identity Card</string>
    <string name="place_holder_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?</string>
    <string name="search">Search...</string>
    <string name="BUNDLE_FIRST_NAME">BUNDLE_FIRST_NAME</string>
    <string name="BUNDLE_LAST_NAME">BUNDLE_LAST_NAME</string>
    <string name="SHARED_PREF_FIRST_NAME">SHARED_PREF_FIRST_NAME</string>
    <string name="SHARED_PREF_LAST_NAME">SHARED_PREF_LAST_NAME</string>
    <string name="SHARED_PREF_TOKEN">SHARED_PREF_TOKEN</string>
</resources>