<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:background="@drawable/background_main"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="700dp"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:rotation="-14"
        android:tint="@color/colorSecondaryExtraLight"
        android:translationX="-10dp"
        android:translationY="-60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave" />

    <ImageView
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:rotation="-9"
        android:tint="@color/colorSecondaryExtraLight"
        android:translationX="-80dp"
        android:translationY="-40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Edit Profile"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="@dimen/secondTitleFontSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />


    <LinearLayout
        android:id="@+id/layout_text_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/subTitleFontSize" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_background_green_border"
            android:elevation="4dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/subTitleFontSize" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_background_green_border"
            android:elevation="4dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="@dimen/subTitleFontSize" />

        <android.widget.Button
            android:id="@+id/button_country"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_background_green_border"
            android:elevation="4dp"
            android:text="@string/country"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="textStart"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/text_view_pmdc"
            android:layout_width="300dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/pmdc_number"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pmdc_edit_text"
            android:layout_width="320dp"
            android:visibility="gone"
            android:layout_height="50dp"
            android:layout_margin="4dp"
            android:background="@drawable/edit_text_background_green_border"
            android:elevation="4dp"
            android:hint="@string/pmdc_number"
            android:inputType="number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/primary_text_light"
            android:textColorHint="@android:color/secondary_text_dark"
            android:textSize="16sp" />


        <android.widget.Button
            android:id="@+id/button_upload_id_card"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:background="@drawable/button_green"
            android:textColor="@android:color/secondary_text_light"
            android:text="@string/upload_identity_card"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pmdc_edit_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>