<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".authUserDetails.AuthUserDetailsFragment">

            <ImageView
                android:layout_width="700dp"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:rotation="-14"
                android:translationX="-10dp"
                android:translationY="-60dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/wave" />

            <ImageView
                android:layout_width="1000dp"
                android:layout_height="wrap_content"
                android:alpha="0.4"
                android:rotation="-9"
                android:translationX="-80dp"
                android:translationY="-40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/wave" />


            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="User Details"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08" />


            <LinearLayout
                android:id="@+id/layout_text_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/text_view_title">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_background_purple_border"
                    android:elevation="4dp"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_background_purple_border"
                    android:elevation="4dp"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age_edit_text"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_background_purple_border"
                    android:elevation="4dp"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight_edit_text"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_background_purple_border"
                    android:elevation="4dp"
                    android:hint="@string/weight"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height_edit_text"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/edit_text_background_purple_border"
                    android:elevation="4dp"
                    android:hint="@string/height"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@android:color/primary_text_light"
                    android:textColorHint="@android:color/secondary_text_dark"
                    android:textSize="16sp" />
            </LinearLayout>


            <android.widget.Button
                android:layout_width="190dp"
                android:layout_height="54dp"
                android:background="@drawable/button_purple"
                android:text="@string/submit"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_text_fields" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>